@@ -2,6 +2,16 @@
 This file is in the public domain.
 
 ==============================================================
+Luatex beta-0.79.1 was released 20140329 (4971)
+==============================================================
+
+* Fixed a bug that caused crashes if pdf.info was not set.
+
+* The top-level build scripts have been merged again, use 
+    build.sh --jit 
+  to build luajittex as well as luatex itself
+
+==============================================================
 Luatex beta-0.79.0 was released 20140328 (4960)
 ==============================================================
 
@@ -2246,7 +2256,7 @@ Other news:
    we probably introduced new problems as well).
 
 * Most (all?) files now have a corrected Copyright header,
-   and link in $Id: NEWS 4962 2014-03-28 15:23:35Z taco $ and  $URL: https://foundry.supelec.fr/svn/luatex/trunk/source/texk/web2c/luatexdir/NEWS $ into the object file.
+   and link in $Id: NEWS 4999 2014-05-06 08:52:33Z taco $ and  $URL: https://foundry.supelec.fr/svn/luatex/trunk/source/texk/web2c/luatexdir/NEWS $ into the object file.
 
 * Some unnecessary files were removed from the distribution.
 
